# groebner-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
src/: entry.rs  lib.rs  macros.rs  main.rs  monomial.rs  ring.rs  scalar.rs
src/macros/: mod.rs  monomial.rs
src/monomial/: mod.rs  tests.rs
src/polynomial/: groebner.rs  ordpol.rs  unipol.rs
src/polynomial/groebner/: mod.rs  signature.rs
src/ring/: mod.rs
